@@ -405,7 +405,8 @@ the key :always are executed always."
     (package-delete embark--confirm)
     (,'tab-bar-close-tab-by-name embark--confirm) ;; Avoid package-lint warning
     ;; search for region contents outside said region
-    (embark-isearch embark--unmark-target)
+    (embark-isearch-forward embark--unmark-target)
+    (embark-isearch-backward embark--unmark-target)
     (occur embark--unmark-target)
     (query-replace embark--beginning-of-target embark--unmark-target)
     (query-replace-regexp embark--beginning-of-target embark--unmark-target)
@@ -1572,7 +1573,8 @@ matching an element of this list."
           (const :tag "Exclude Embark general actions"
                  (embark-collect embark-live embark-export
                   embark-cycle embark-act-all embark-keymap-help
-                  embark-become embark-isearch))
+                  embark-become embark-isearch-forward
+                  embark-isearch-backward))
           (repeat :tag "Other" (choice regexp symbol))))
 
 (defcustom embark-verbose-indicator-buffer-sections
@@ -3751,12 +3753,20 @@ with command output.  For replacement behavior see
    (list (read-char-by-name "Insert character  (Unicode name or hex): ")))
   (kill-new (format "%c" char)))
 
-(defun embark-isearch ()
-  "Prompt for string in the minibuffer and start isearch.
+(defun embark-isearch-forward ()
+  "Prompt for string in the minibuffer and start isearch forwards.
 Unlike isearch, this command reads the string from the
 minibuffer, which means it can be used as an Embark action."
   (interactive)
   (isearch-mode t)
+  (isearch-edit-string))
+
+(defun embark-isearch-backward ()
+  "Prompt for string in the minibuffer and start isearch backwards.
+Unlike isearch, this command reads the string from the
+minibuffer, which means it can be used as an Embark action."
+  (interactive)
+  (isearch-mode nil)
   (isearch-edit-string))
 
 (defun embark-toggle-highlight ()
@@ -4043,7 +4053,8 @@ This simply calls RUN with the REST of its arguments inside
   "L" #'embark-live
   "B" #'embark-become
   "A" #'embark-act-all
-  "C-s" #'embark-isearch
+  "C-s" #'embark-isearch-forward
+  "C-r" #'embark-isearch-backward
   "C-SPC" #'mark
   "DEL" #'delete-region
   "SPC" #'embark-select)
